@@ -1,7 +1,0 @@
-?package(gcompris):\
-	needs="x11"\
-	section="Applications/Edutainment/Miscellanous"\
-	title="GCompris"\
-	longtitle="Educational Activities starting at 3 years old"\
-	command="gcompris"\
-	icon="gcompris.png"
